--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,2 +1,2 @@
-/* Style Custom CSS & CSS Minifier From Harymahayana07 */
+/* Style Custom Css & Css Minifier From Harymahayana07 */
 @media (max-width:768px){#aside{margin-top:855px}.about_me_card{height:840px}}
